--- a/style.css
+++ b/style.css
@@ -1,16 +1,7 @@
 * {
-  background-color: lavender;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
-
-.text {
-  font-size: 30px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  color: indigo;
-  background-color: #c8c8e8;
 }
 
 body {
@@ -18,62 +9,115 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  background-color: black;
 }
 
 .calculator {
+  height: 470px;
+  width: 270px;
+  border: 2px solid #1d1f1d;
   display: flex;
-  flex-wrap: wrap;
-  width: 340px;
-  border: 30px solid #c8c8e8;
-  box-sizing: content-box;
-  border-radius: 30px;
-  background-color: #c8c8e8;
-  outline: 5px solid indigo;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: black;
+  border-radius: 16px;
+}
+
+.header {
+  background-color: #1d1f1d;
+  height: 40px;
+  width: 235px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  border-radius: 16px;
+}
+
+p {
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  user-select: none;
+}
+
+.image {
+  padding: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+img {
+  width: 15px;
+  height: 15px;
+}
+
+.row {
+  width: 240px;
+  outline: 2px solid black;
+  display: flex;
+}
+
+.btn {
+  width: 70px;
+  border: none;
+  outline: 2px solid black;
+  color: white;
 }
 
 .type {
-  width: 327px;
-  height: 60px;
-  border: 3px solid indigo;
-  border-radius: 5px;
+  border: none;
+  width: 220px;
+  height: 100px;
+  padding-right: 10px;
   margin: 1px;
   box-sizing: content-box;
   font-size: 40px;
   text-align: right;
-  padding-right: 5px;
-  padding-top: 60px;
-  border-top-right-radius: 30px;
+  color: white;
+  background-color: black;
+  margin: 10px;
 }
 
 .type:focus {
   outline: none;
 }
+
+.type::placeholder {
+  color: white;
+}
+
 .btn {
-  height: 70px;
-  width: 84px;
-  border: 2px solid black;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  background-color: #1d1f1d;
+  height: 50px;
+  width: 60px;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 20px;
-  margin: 0.5px;
-  border-radius: 5px;
-  font-weight: bold;
+  margin: 2px;
+  border-radius: 7px;
+  cursor: pointer;
+  user-select: none;
+  transition: background-color 0.1s ease-in-out;
 }
 
-.multiply,
-.divide,
-.minus,
-.add,
-.equals {
-  border: 3px solid indigo;
-  background-color: #d1c4e9;
+.num:active {
+  background-color: grey;
 }
 
-.zero {
-  border-bottom-left-radius: 30px;
+.nonNum {
+  color: black;
+  background-color: #00ffff;
+  transition: background-color 0.1s ease-in-out;
 }
 
-.equals {
-  border-bottom-right-radius: 30px;
+.nonNum:active {
+  background-color: #00ffff80;
 }
